kustomize/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flytesystem
  namespace: flyte
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      # NOTE: If you change this, you must update the BASE_URL value in flyteconsole.yaml
      - path: /console
        backend:
          serviceName: flyteconsole
          servicePort: 80
      # This is useful only for sandbox mode and should be templatized/removed in non-sandbox environments
      - path: /__webpack_hmr
        backend:
          serviceName: flyteconsole
          servicePort: 80
      - path: /api
        backend:
          serviceName: flyteadmin
          servicePort: 80
      - path: /healthcheck
        backend:
          serviceName: flyteadmin
          servicePort: 80
      - path: /v1
        backend:
          serviceName: flyteadmin
          servicePort: 80
      # NOTE: Port 81 in flyteadmin is the GRPC server port for
      # FlyteAdmin.
      - path: /flyteidl.service.AdminService
        backend:
          serviceName: flyteadmin
          servicePort: 81
      # Port 87 in FlyteAdmin maps to the redoc container.
      - path: /openapi
        backend:
          serviceName: flyteadmin
          servicePort: 87
